--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/http": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/platform-server": "^7.2.2",
     "@angular/router": "~7.1.0",
     "@ngrx/effects": "^7.1.0",
     "@ngrx/router-store": "^7.1.0",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "firebase": "^5.7.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -48,8 +51,10 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "webpack-cli": "^3.2.1"
   }
 }
